增加代码管理平台

--- a/static/html/admin/server.html
+++ b/static/html/admin/server.html
@@ -145,7 +145,7 @@
                         <th>状态</th>
                         <th>优先级</th>
                         <th>最大容器数量</th>
-                        <th>大大内存分配</th>
+                        <th>最大内存分配</th>
                         <th>操作</th>
                     </tr>
                 </thead>
