--- a/static/html/code/index.html
+++ b/static/html/code/index.html
@@ -26,7 +26,7 @@
 
         <div class="panel panel-default">
           <div class="panel-body">
-            <p>等待上传</p>
+            <p id="tip">等待上传</p>
             <div class="progress">
               <div id="p" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                 0%
@@ -34,6 +34,8 @@
             </div>
           </div>
         </div>
+
+        <input type="file" id="file" accept="application/zip" onchange="uploadZip();" style="display:none;">
 
         <div id="content" class="main-div"></div>
 
@@ -63,7 +65,7 @@
                             <td class="address">/code/download/{{obj.warehouse}}/{{obj.token}}</td>
                             <td>
                                 <a href="javascript:editCode({{index}});">编辑</a>
-                                <a href="">上传代码</a>
+                                <a href="javascript:updateFile({{obj.id}});">上传代码</a>
                                 <a href="/code/deleteCode/{{obj.id}}">删除</a>
                             </td>
                         </tr>
