增加用户登录

--- a/static/html/user/index.html
+++ b/static/html/user/index.html
@@ -163,5 +163,10 @@
         <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <script src="/static/js/template.js"></script>
         <script src="/static/js/user.js"></script>
+        <script>
+            $(document).ready(function(){
+                showAllApp();
+            });
+        </script>
     </body>
 </html>
