--- a/static/html/index.html
+++ b/static/html/index.html
@@ -15,6 +15,7 @@
               background-image:url("/static/pic/1.jpg");
                background-size:100% 100%;
                z-index:-1;
+                opacity:0.3;
             }
             ul li{
                 font-size:25px;
