增加操作应用界面

--- a/src/pages/apps/index.html
+++ b/src/pages/apps/index.html
@@ -18,7 +18,7 @@
             <p><strong>CPU：</strong> 1核</p>
             <p><strong>内存：</strong> 128M</p>
             <p>
-                <el-button type="info">操作应用</el-button>
+                <el-button type="info" @click="optionApp('abc');">操作应用</el-button>
                 &nbsp;
                 <el-button type="danger">删除应用</el-button>
             </p>
