--- a/src/pages/option_app/index.html
+++ b/src/pages/option_app/index.html
@@ -10,6 +10,7 @@
             <p><strong>应用名字：</strong> 测试应用A</p>
             <p><strong>应用描述：</strong> 这是一个小应用！</p>
             <p><strong>应用环境：</strong> static</p>
+            <p><strong>应用镜像：</strong> 无</p>
             <p><strong>代码地址：</strong> git@github.com:yubang/ilog.git</p>
             <p><strong>应用域名：</strong> http://blog.yubangweb.com</p>
         </div>
