--- a/src/pages/apps/index.html
+++ b/src/pages/apps/index.html
@@ -28,7 +28,7 @@
     <div class="block">
         <el-pagination
                 layout="prev, pager, next"
-                :total="50" :page-size="5" :current-page="currentPage" @current-change="currentChange">
+                :total="totalPage" :page-size="5" :current-page="currentPage" @current-change="currentChange">
         </el-pagination>
     </div>
 
