增加获取应用具体信息

--- a/src/pages/apps/index.html
+++ b/src/pages/apps/index.html
@@ -19,8 +19,8 @@
             </p>
             <p><strong>代码地址：</strong> {{app.git}}</p>
             <p><strong>应用域名：</strong> {{app.domain}}</p>
-            <p><strong>CPU：</strong> {{app.cpu}}</p>
-            <p><strong>内存：</strong> {{app.memory}}</p>
+            <p><strong>CPU：</strong> {{app.cpu}}核</p>
+            <p><strong>内存：</strong> {{app.memory}}M</p>
             <p>
                 <el-button type="info" @click="optionApp(app.appId);">操作应用</el-button>
                 &nbsp;
