--- a/src/pages/base.html
+++ b/src/pages/base.html
@@ -7,7 +7,7 @@
 <el-row class="tac">
     <el-col :span="4">
         <el-menu default-active="1" class="el-menu-vertical-demo">
-            <el-menu-item index="1" @click.native="app.goto('/admin/web/apps');"><i class="el-icon-menu"></i>应用管理</el-menu-item>
+            <el-menu-item index="1" @click.native="gotoApps"><i class="el-icon-menu"></i>应用管理</el-menu-item>
         </el-menu>
     </el-col>
     <el-col :span="1">&nbsp;</el-col>
