--- a/src/pages/option_app/index.html
+++ b/src/pages/option_app/index.html
@@ -6,13 +6,14 @@
             <span style="line-height: 36px;">应用信息</span>
         </div>
         <div class="text item">
-            <p><strong>应用Id：</strong> abcdef</p>
-            <p><strong>应用名字：</strong> 测试应用A</p>
-            <p><strong>应用描述：</strong> 这是一个小应用！</p>
-            <p><strong>应用环境：</strong> static</p>
-            <p><strong>应用镜像：</strong> 无</p>
-            <p><strong>代码地址：</strong> git@github.com:yubang/ilog.git</p>
-            <p><strong>应用域名：</strong> http://blog.yubangweb.com</p>
+            <p><strong>应用Id：</strong> {{appId}}</p>
+            <p><strong>应用名字：</strong> {{app.name}}</p>
+            <p><strong>应用描述：</strong> {{app.desc}}</p>
+            <p><strong>应用环境：</strong> {{app.image}}</p>
+            <p><strong>应用镜像：</strong> <template v-if="app.nowImageName != ''">{{app.nowImageName}}</template>
+                <template v-else>无</template></p>
+            <p><strong>代码地址：</strong> {{app.git}}</p>
+            <p><strong>应用域名：</strong> {{app.domain}}</p>
         </div>
     </el-card>
     <br>
@@ -87,7 +88,11 @@
             <span style="line-height: 36px;">应用日志</span>
         </div>
         <div class="text item">
-            <p>镜像打包！</p>
+            <el-alert v-for="log in logs"
+                    :title="'【' + log.time + '】   ' + log.content"
+                    :type="log.type"
+                    :closable="false" style="margin-top:5px;">
+            </el-alert>
         </div>
     </el-card>
 
